--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,8 @@
 /.projen/deps.json linguist-generated
 /.projen/files.json linguist-generated
 /.projen/tasks.json linguist-generated
+/.vscode/extensions.json linguist-generated
+/.vscode/settings.json linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
 /tsconfig.dev.json linguist-generated
