--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "projen": "^0.67.36",
     "standard-version": "^9",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
